props first and second iteration

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  margin: 20px;
+}
+
+.container {
+  display: flex;
+  align-items:center;
+  justify-content:left;
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
+  margin: 20px;
+}
+
+.idImage {
+  display:flex;
+  padding: 20px;
+}
